introduced UserController instead of AuthController
